2013-04-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/power5/fpu/s_modf.c: Moved to ...
	* sysdeps/powerpc/power5+/fpu/s_modf.c: ... this.
	* sysdeps/powerpc/power5/fpu/s_modff.c: Moved to ...
	* sysdeps/powerpc/power5+/fpu/s_modff.c: ... this.
	* sysdeps/powerpc/powerpc32/power5+/Implies: Add powerpc/power5+ and
	powerpc/power5+/fpu folders.
	* sysdeps/powerpc/powerpc64/power5+/Implies: Likewise.

2013-04-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/power5/fpu/s_modf.c: New file: modf optimization for
	POWER.
	* sysdeps/powerpc/power5/fpu/s_modff.c: New file: modff optimization
	for POWER.
	* sysdeps/powerpc/powerpc64/power5/Implies: Add powerpc/power5 and
	powerpc/power5/fpu folders.
	* sysdeps/powerpc/powerpc32/power5/Implies: Likewise.

2013-04-02  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/fpu/s_rint.S: Remove branch prediction
	instructions.
	* sysdeps/powerpc/powerpc32/fpu/s_rintf.S: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/s_rint.S: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/s_rintf.S: Likewise.
	* benchtests/Makefile: Add rint benchtest.
	* benchtests/rint-inputs: Input for rint benchtest.

2013-03-28  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc32/start.S (cfi_startproc, cfi_endproc):
	Define as empty.
	* sysdeps/powerpc/powerpc64/start.S (cfi_startproc, cfi_endproc):
	Likewise.

2013-03-25  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/s_llround.c: Fix libm ABI issue with missing
	llroundl symbol when building for PPC32.

2013-03-21  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/w_sqrt.c (compat_symbol): Add sqrtl compat
	symbol.

2013-03-15  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/bits/libc-vdso.h (VDSO_IFUNC_RET): Add
	macro to return vdso values correctly in IFUNC implementations.