@@ -4,5 +4,6 @@ libc {
     __vdso_clock_gettime;
     __vdso_clock_getres;
     __vdso_getcpu;
+    __vdso_time;
   }
 }
